Style gallery section id of page-container to display as grid to test whether fixes gallery display issues on iphone and ipad mini

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -404,6 +404,10 @@ https://stackoverflow.com/questions/46090760/controlling-the-size-of-an-image-wi
 
 /* gallery page */
 
+#page-container {
+    display: grid; 
+}
+
 #gallery-container {
     display: grid; 
     grid-template-areas: 
